--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "the Complete Intro to React, v5",
   "main": "src/App.js",
   "dependencies": {
+    "@babel/node": "^7.6.3",
     "@emotion/core": "^10.0.22",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.2.1",
+    "babel-cli": "^6.26.0",
+    "express": "^4.17.1",
     "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.8.4"
@@ -33,6 +36,8 @@
     "prettier": "^1.16.1"
   },
   "scripts": {
+    "build": "parcel build --public-url ./dist/ src/index.html",
+    "start": "npm run build && babel-node server/index.js",
     "clear-build-cache": "rm -rf .cache/ dist/",
     "dev": "parcel src/index.html",
     "dev:mock": "cross-env PET_MOCK=mock parcel src/index.html",
