--- a/package.json
+++ b/package.json
@@ -20,20 +20,21 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@emotion/babel-preset-css-prop": "^10.0.23",
+    "@types/reach__router": "^1.2.6",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
     "babel-core": "^6.0.20",
-    "babel-eslint": "^10.0.1",
     "babel-polyfill": "^6.0.16",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
     "cross-env": "^5.2.0",
-    "eslint": "^5.12.1",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.7.0",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^1.16.1"
+    "prettier": "^1.16.1",
+    "tslint": "^6.0.0-beta0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "build": "parcel build --public-url ./dist/ src/index.html",
@@ -42,7 +43,7 @@
     "dev": "parcel src/index.html",
     "dev:mock": "cross-env PET_MOCK=mock parcel src/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "lint": "tslint --project",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brian Holt <btholt+complete-intro-to-react@gmail.com>",
