--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/core": "^10.0.22",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.2.1",
+    "@testing-library/react": "^9.3.1",
     "babel-cli": "^6.26.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
@@ -23,7 +24,6 @@
     "@types/reach__router": "^1.2.6",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
-    "babel-core": "^6.0.20",
     "babel-polyfill": "^6.0.16",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
@@ -44,9 +44,9 @@
     "dev:mock": "cross-env PET_MOCK=mock parcel src/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "tslint --project",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
-  "author": "Brian Holt <btholt+complete-intro-to-react@gmail.com>",
+  "author": "Matt Upham",
   "license": "Apache-2.0",
   "browserslist": [
     "last 2 Chrome versions",
