--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@reach/router": "^1.2.1",
     "@testing-library/react": "^9.3.1",
     "babel-cli": "^6.26.0",
+    "babel-core": "^7.0.0-bridge.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "react": "^16.11.0",
